2005-10-15  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/handle.c: fix memory leaks. 700k per 10000 queries.
	  fixed by Nathaniel Talbott. Thank you!
	* ext/oci8/oraconf.rb: add -R to linker on Solaris and Linux.
	  http://rubyforge.org/tracker/index.php?func=detail&aid=2148&group_id=256&atid=1051
	* lib/oci8.rb.in: add DateTime suppport.
	* test/test_dbi.rb, test/test_oci8.rb: testcases for DateTime.
	* test/test_oradate.rb: delete an unsuccessfull testcase, which depends on libc implementation.
	* README: add bind-types.

2005-07-20  KUBO Takehiro  <kubo@jiubao.org>
	* README: rewrite.
	* ext/oci8/oraconf.rb: 1. try $libs which works on many cases then
	  get from demo_rdbms.mk. 2. don't read sysliblist when instant client.
	  3. rewrie OraConf#check_lp64().
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.12.

2005-07-16  KUBO Takehiro  <kubo@jiubao.org>
	* metaconfig: move "require 'base64'" and "require 'zlib'" to the
	  next line of "def get_zcontent(file)" for a ruby which doesn't
	  have 'zlib'.

2005-05-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for cygwin. fix for oracle instant client.
	* metaconfig: add distbin task.

2005-05-29  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::BindType::Mapping[:number_unknown_prec]
	  and OCI8::BindType::Mapping[:number_no_prec_setting].
	* ext/oci8/oraconf.rb: copy from oraconf.rb of ruby-oci8 0.2.
	* ext/oci8/lob.c: delete OCILobLocator#getChunkSize on Oracle 8.0.
	  use OCILobAssign() instead of OCILobLocatorAssign() on Oracle 8.0.
	* ext/oci8/extconf.rb: add have_func("OCILobGetChunkSize") and
	  have_func("OCILobLocatorAssign") for Oracle 8.0.
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.11
	* README: add '5. How to customize fetched datatypes.'

2005-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* branch as oci8-0-1.
	* oci8.rb.in: fix bug on binding Time or Date.
	* Makefile, ext/oci8/extconf.rb: change version to 0.1.10.1
